fixed 1px gap between navbar and subkast-navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -350,7 +350,7 @@ body.not-found {
     }
   }
   .subkast-navbar {
-    top: 57px;
+    top: 56px;
     min-height: initial;
     height: 32px;
     line-height: 32px;
